<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/pref_category_typing_assistance">
    <SwitchPreference android:key="autocorrect" android:title="@string/pref_autocorrect_title" android:summary="@string/pref_autocorrect_summary" android:defaultValue="true"/>
    <SwitchPreference android:key="suggestions" android:title="@string/pref_suggestions_title" android:summary="@string/pref_suggestions_summary" android:defaultValue="true"/>
    <SwitchPreference android:key="grammar_corrections" android:title="@string/pref_grammar_corrections_title" android:summary="@string/pref_grammar_corrections_summary" android:defaultValue="false"/>
    <SwitchPreference android:key="multimodal_voice_typing" android:title="@string/pref_multimodal_voice_title" android:summary="@string/pref_multimodal_voice_summary" android:defaultValue="false"/>
    <Preference android:key="typing_assistance_status" android:title="@string/pref_typing_assistance_status_title" android:selectable="false"/>
    <Preference android:key="clear_typing_assistance_data" android:title="@string/pref_clear_typing_assistance_title" android:summary="@string/pref_clear_typing_assistance_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_updates">
    <SwitchPreference android:key="update_automatic_checks" android:title="@string/pref_update_automatic_checks_title" android:summary="@string/pref_update_automatic_checks_summary" android:defaultValue="true"/>
    <ListPreference android:key="update_delivery" android:title="@string/pref_update_delivery_title" android:summary="%s" android:defaultValue="in_app" android:entries="@array/pref_update_delivery_entries" android:entryValues="@array/pref_update_delivery_values"/>
    <Preference android:key="update_current_version" android:title="@string/pref_update_current_version_title" android:selectable="false"/>
    <Preference android:key="update_status" android:title="@string/pref_update_status_title" android:selectable="false"/>
    <Preference android:key="check_for_updates" android:title="@string/pref_check_for_updates_title" android:summary="@string/pref_check_for_updates_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_backup_restore">
    <Preference android:key="export_settings_backup" android:title="@string/pref_export_settings_title" android:summary="@string/pref_export_settings_summary"/>
    <Preference android:key="import_settings_backup" android:title="@string/pref_import_settings_title" android:summary="@string/pref_import_settings_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_layout">
    <juloo.keyboard2.prefs.LayoutsPreference/>
    <SwitchPreference android:key="clean_mode" android:title="@string/pref_clean_mode_title" android:summary="@string/pref_clean_mode_summary" android:defaultValue="true"/>
    <ListPreference android:key="number_entry_layout" android:title="@string/pref_number_entry_title" android:summary="%s" android:defaultValue="pin" android:entries="@array/pref_number_entry_entries" android:entryValues="@array/pref_number_entry_values"/>
    <PreferenceScreen android:title="@string/pref_extra_keys_title">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <juloo.keyboard2.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <juloo.keyboard2.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="number_row" android:title="@string/pref_number_row_title" android:summary="%s" android:defaultValue="no_number_row" android:entries="@array/pref_show_number_row_entries" android:entryValues="@array/pref_show_number_row_values"/>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="high_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values"/>
    <ListPreference android:key="split_layout" android:title="@string/pref_split_layout" android:summary="%s" android:defaultValue="wide" android:entries="@array/pref_split_layout_entries" android:entryValues="@array/pref_split_layout_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_snippets">
    <SwitchPreference android:key="frankenkey_snippets_enabled" android:title="@string/pref_snippets_enabled_title" android:summary="@string/pref_snippets_enabled_summary" android:defaultValue="true"/>
  </PreferenceCategory>
  <juloo.keyboard2.snippets.SnippetSlotsPreference/>
  <PreferenceCategory android:title="@string/pref_category_typing">
    <ListPreference android:key="swipe_dist" android:title="@string/pref_swipe_dist_title" android:summary="@string/pref_swipe_dist_summary" android:defaultValue="15" android:entries="@array/pref_swipe_dist_entries" android:entryValues="@array/pref_swipe_dist_values"/>
    <ListPreference android:key="circle_sensitivity" android:title="@string/pref_circle_sensitivity_title" android:summary="%s" android:defaultValue="2" android:entries="@array/pref_circle_sensitivity_entries" android:entryValues="@array/pref_circle_sensitivity_values"/>
    <ListPreference android:key="slider_sensitivity" android:title="@string/pref_slider_sensitivity_title" android:summary="%s" android:defaultValue="30" android:entries="@array/pref_slider_sensitivity_entries" android:entryValues="@array/pref_slider_sensitivity_values"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="longpress_timeout" android:title="@string/pref_long_timeout_title" android:summary="%sms" android:defaultValue="600" min="50" max="2000"/>
    <SwitchPreference android:key="keyrepeat_enabled" android:title="@string/pref_keyrepeat_enabled" android:summary="@string/pref_keyrepeat_enabled_summary" android:defaultValue="true"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="longpress_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_long_interval_title" android:summary="%sms" android:defaultValue="25" min="5" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="delete_repeat_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_delete_repeat_interval_title" android:summary="%sms" android:defaultValue="65" min="35" max="500"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="paste_repeat_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_paste_repeat_interval_title" android:summary="%sms" android:defaultValue="500" min="100" max="1500"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="delete_words_interval" android:title="@string/pref_delete_words_interval_title" android:summary="%sms" android:defaultValue="250" min="50" max="1000"/>
    <SwitchPreference android:key="lock_double_tap" android:title="@string/pref_lock_double_tap_title" android:summary="@string/pref_lock_double_tap_summary" android:defaultValue="false"/>
    <ListPreference android:key="physical_keyboard_behavior" android:title="@string/pref_physical_keyboard_behavior" android:summary="%s" android:defaultValue="show" android:entries="@array/pref_physical_keyboard_behavior_entries" android:entryValues="@array/pref_physical_keyboard_behavior_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_behavior">
    <SwitchPreference android:key="autocapitalisation" android:title="@string/pref_autocapitalisation_title" android:summary="@string/pref_autocapitalisation_summary" android:defaultValue="true"/>
    <ListPreference android:key="change_method_key_replacement" android:title="@string/pref_change_method_key_replacement_title" android:summary="%s" android:entries="@array/pref_change_method_key_replacement_entries" android:entryValues="@array/pref_change_method_key_replacement_values" android:defaultValue="prev"/>
    <SwitchPreference android:key="vibrate_custom" android:title="@string/pref_vibrate_custom" android:summary="@string/pref_vibrate_custom_summary" android:defaultValue="false"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:dependency="vibrate_custom" android:key="vibrate_duration" android:title="@string/pref_vibrate_duration_title" android:summary="%sms" android:defaultValue="20" min="0" max="100"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_style">
    <ListPreference android:key="theme" android:title="@string/pref_theme" android:summary="%s" android:defaultValue="system" android:entries="@array/pref_theme_entries" android:entryValues="@array/pref_theme_values"/>
    <juloo.keyboard2.prefs.CustomThemesPreference android:key="custom_themes" android:title="@string/pref_custom_themes_title" android:defaultValue="[]"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="label_brightness" android:title="@string/pref_label_brightness" android:summary="%s%%" android:defaultValue="100" min="50" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_opacity" android:title="@string/pref_keyboard_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="key_opacity" android:title="@string/pref_key_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="key_activated_opacity" android:title="@string/pref_key_activated_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <PreferenceScreen android:title="@string/pref_margin_bottom_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="3" min="0" max="120"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="margin_bottom_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="250"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_keyboard_height_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height" android:title="@string/pref_portrait" android:summary="%s%%" android:defaultValue="35" min="10" max="100"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape" android:title="@string/pref_landscape" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%s%%" android:defaultValue="35" min="10" max="50"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="keyboard_height_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_horizontal_margin_title">
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <juloo.keyboard2.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
    </PreferenceScreen>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="character_size" android:title="@string/pref_character_size_title" android:summary="@string/pref_character_size_summary" android:defaultValue="1.15" min="0.75" max="1.5"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="key_vertical_margin" android:title="@string/pref_key_vertical_space" android:summary="%s%%" android:defaultValue="1.5" min="0" max="5"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="key_horizontal_margin" android:title="@string/pref_key_horizontal_space" android:summary="%s%%" android:defaultValue="2" min="0" max="5"/>
    <SwitchPreference android:key="border_config" android:title="@string/pref_border_config_title" android:summary="@string/pref_border_config_summary" android:defaultValue="false"/>
    <juloo.keyboard2.prefs.IntSlideBarPreference android:key="custom_border_radius" android:title="@string/pref_corners_radius_title" android:summary="%s%%" android:defaultValue="0" min="0" max="100" android:dependency="border_config"/>
    <juloo.keyboard2.prefs.SlideBarPreference android:key="custom_border_line_width" android:title="@string/pref_border_width_title" android:summary="%sdp" android:defaultValue="0" min="0" max="5" android:dependency="border_config"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_gif">
    <EditTextPreference android:key="giphy_api_key" android:title="@string/pref_giphy_api_key_title" android:summary="@string/pref_giphy_api_key_summary" android:dialogTitle="@string/pref_giphy_api_key_dialog"/>
    <Preference android:key="giphy_api_dashboard" android:title="@string/pref_giphy_dashboard_title" android:summary="@string/pref_giphy_dashboard_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_clipboard">
    <ListPreference android:key="clipboard_history_duration" android:title="@string/pref_clipboard_history_duration" android:summary="%s" android:defaultValue="-1" android:entries="@array/pref_clipboard_duration_entries" android:entryValues="@array/pref_clipboard_duration_values"/>
    <SwitchPreference android:key="clipboard_save_screenshots" android:title="@string/pref_clipboard_save_screenshots" android:summary="@string/pref_clipboard_save_screenshots_summary" android:defaultValue="true"/>
  </PreferenceCategory>
</PreferenceScreen>
