<?xml version="1.0" encoding="utf-8"?>
<juloo.keyboard2.GifSearchView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="?attr/colorKeyboard" android:hardwareAccelerated="false">
  <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="4dp">
    <Button android:id="@+id/gif_close_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gif_close_button"/>
    <EditText android:id="@+id/gif_search_query" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:hint="@string/gif_search_hint" android:singleLine="true" android:imeOptions="actionSearch" android:inputType="text"/>
    <Button android:id="@+id/gif_search_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gif_search_button"/>
  </LinearLayout>
  <TextView android:id="@+id/gif_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingLeft="8dp" android:paddingRight="8dp" android:paddingBottom="4dp" android:textColor="?android:textColorPrimary" android:textSize="12sp"/>
  <GridView android:id="@+id/gif_grid" android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="vertical" android:numColumns="auto_fit" android:columnWidth="96dp" android:verticalSpacing="4dp" android:horizontalSpacing="4dp" android:stretchMode="columnWidth" android:background="?attr/colorKeyboard"/>
  <juloo.keyboard2.Keyboard2View android:id="@+id/gif_keyboard_view" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
</juloo.keyboard2.GifSearchView>
